# BrandybuckCLI

./: .gitignore  Cargo.toml  README.md  brandybuck.config.json  snapcraft.yaml
src/: cli.rs  main.rs
src/db_generators/: db_types.rs  mod.rs  sqlite.rs
src/defaults/: config.json
src/docker_generators/: files_docker.rs  mod.rs
src/handlers/: build_handler.rs  config_handler.rs  file_handler.rs  init_handler.rs  mod.rs
src/helpers/: file_helper.rs  migration_sqlite.rs  mod.rs  util_helper.rs
src/models/: brandybuck_config_file.rs  brandybuck_models_file.rs  config_file.rs  db_table_structure.rs  file_config_package_json.rs  file_config_tssconfig_json.rs  mod.rs  models_file.rs  node_package.rs  ts_compiler_options.rs
src/snippets/: mod.rs  snippets_server.rs
src/ts_generators/: file_server.rs  files_auth.rs  files_dotenv.rs  files_models.rs  files_routes.rs  mod.rs
