[package]
name = "brandybuck_cli"
version = "0.1.0"
authors = ["Domen Vake <vake.domen94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
log = "0.4"
serde="1.0.115"
serde_json="1.0.57"
serde_derive = "1.0.115"